# pingbox

./: .cursorrules  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: database.py  main.py
backend/app/core/: config.py  security.py
backend/app/models/: __init__.py  group.py  message.py  status.py  user.py
backend/app/routers/: auth.py  groups.py  media.py  messages.py  status.py
backend/app/schemas/: message.py  user.py
backend/app/services/: media.py  redis_service.py
backend/app/ws/: manager.py
backend/scripts/: reset_dev_schema.sql
frontend/: package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: ChatWindow.tsx  CreateGroupModal.tsx  GroupChatWindow.tsx  MessageBubble.tsx  Sidebar.tsx
frontend/src/hooks/: useWebSocket.ts
frontend/src/pages/: ChatPage.tsx  LoginPage.tsx  RegisterPage.tsx
frontend/src/store/: authStore.ts  chatStore.ts
frontend/src/utils/: api.ts  time.ts
nginx/: nginx.conf
